@@ -19,6 +19,7 @@ Version 1.13.6+dev:
    * Add color= attribute to [floating_text]
  * Miscellaneous and bug fixes:
    * Fixed severe lag/freeze on slow PCs (bug #25356)
+   * Updated wmlscope to handle the square braces syntax in file paths
 
 Version 1.13.6:
  * AI:
